--- a/src/main/resources/templates/sellTicket1.html
+++ b/src/main/resources/templates/sellTicket1.html
@@ -482,9 +482,9 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="trainNumber">Train Number</label>
-                    <input type="text" id="trainNumber" name="trainNumber" required>
-                </div>
+    				<label for="trainNumber">Train Number</label>
+    				<input type="text" id="trainNumber" name="trainNumber" pattern="\d{5}" title="Train Number exactly 5 digits" required>
+				</div>
 
                 <div class="form-group">
     <label for="fromStation">From Station</label>
