--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1115,7 +1115,7 @@
                 <h3>Contact Us</h3>
                 <ul>
                     <li><a href="mailto:swap2ticket@gmail.com"><i class="fas fa-envelope"></i>swap2ticket@gmail.com</a></li>
-                    <li><a href="tel:+916363356214"><i class="fas fa-phone"></i> +91 (555) 123-4567</a></li>
+                    <li><a href="tel:+916363356214"><i class="fas fa-phone"></i> +91 6363356214</a></li>
                     <li><a href="https://maps.google.com?q=Rajajinagar,Bengaluru-560010"><i class="fas fa-map-marker-alt"></i> Rajajinagar, Bengaluru- 560010</a></li>
                 </ul>
             </div>
@@ -1535,7 +1535,7 @@ window.addEventListener("load", function () {
   "logo": "https://swapticket.com/docs/swaplogo.png",
   "contactPoint": {
     "@type": "ContactPoint",
-    "telephone": "+91-555-123-4567",
+    "telephone": "+91 6363356214",
     "contactType": "customer service",
     "email": "support@swapticket.com"
   },
